# django-livereloadish

./: CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py
livereloadish/: __init__.py  apps.py  middleware.py  patches.py  urls.py  views.py
livereloadish/static/js/: livereloadish.d.ts  livereloadish.d.ts.map  livereloadish.js  livereloadish.js.map  livereloadish.ts  tsconfig.json
livereloadish/templates/livereloadish/: stats.html
