[metadata]
license-file = LICENSE

[wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore =
    E501,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[bumpversion]
current_version = 0.1.0
files = setup.py livereloadish/__init__.py README.rst CHANGELOG
commit = True
tag = True
tag_name = {new_version}
search = ?next?

[check-manifest]
ignore =
    .travis.yml
    .bumpversion.cfg
    .idea
    .tox
    __pycache__
    bin
    include
    lib
    local
    share
    .Python
    htmlcov